# portaldot-dev-kit

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEMO.md  DEMODAY_SCRIPT.md  Dockerfile  NOTICE  PUBLISHING.md  README.md  SECURITY.md  SUBMISSION.md  SUPPORT.md  TRADEMARK.md  VIDEO_SCRIPT.md  attempt_assets_signing.py  build_vo_mix.py  extract_index.py  extract_vo_timestamps.py  pyproject.toml  record_update_demo.sh  serve_local.bat  serve_local.ps1
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue_seed.md  kb_entry.md
.github/workflows/: ci.yml  docker.yml  pdk-ts-publish.yml  pdk-ts.yml  release.yml  security.yml
docs/: DEMODAY_SCRIPT.md  RECORD_GIF.md  TROUBLESHOOTING.md  alpha5-signing-design.md  ci-recipe.md  community-post.md  community-voting-submission.md  discord-progress-review.md  dorahacks-submission.md  live-demo-narration.md  pdk-partnership-plan.docx  pdk-partnership-plan.md  pdk-whitepaper-draft.docx  pdk-whitepaper-draft.md  pitch-deck-narration.md  portaldot-submission-form.md  showcase-qa.md  showcase-script.md  titus-faq.md  titus-followup.md  titus-progress-dm.md  x-bio-and-discord.md  x-launch-post.md  x-progress-update.md
docs/adr/: 000-index.md  001-polkadot-api-vs-papi.md  002-metadata-driven-decoder.md  003-shared-yaml-kb.md
docs/examples/: README.md
docs/sub/: live-demo.ass
examples/: README.md
examples/basic-consumer/: README.md  package-lock.json  package.json
pdk/: CLAUDE.md  __init__.py  __main__.py  cli.py  config.py
pdk-ts/: CHANGELOG.md  CONTRIBUTING.md  EXIT_CODES.md  README.md  biome.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
pdk-ts/scripts/: copy-data.mjs
pdk-ts/src/: index.ts  lib.ts
pdk-ts/tests/: accounts.test.ts  assets.test.ts  chain.test.ts  config.test.ts  consistency.test.ts  debug.test.ts  doctor-liveness.test.ts  doctor.test.ts  errors.test.ts  explain-fastpath.test.ts  explain.test.ts  fund.test.ts  kb-env.test.ts  kb.test.ts  keys.test.ts  markup-injection.test.ts  report.test.ts  seed.test.ts  send.test.ts  simulate.test.ts  version.test.ts  watch.test.ts
pdk/commands/: __init__.py  accounts.py  ai_setup.py  debug.py  doctor.py  explain.py  fund.py  kb.py  keys.py  pallets.py  report.py  seed.py  send.py  simulate.py  (+3 more)
remotion/: .gitignore  README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
scripts/: build_subtitles.py  extract_cmd_timings.py  generate_audio_fx.sh  generate_vo.py  vo_script.json  vo_update_demo.json
site/: .gitignore  next.config.mjs  package-lock.json  package.json
tests/: __init__.py  test_chain_units.py  test_cli.py  test_decoder.py  test_explain.py  test_fund.py  test_index_verify.py  test_knowledge.py  test_markup_injection.py  test_report.py  test_simulate.py  test_storage.py
web/: index.html  logo.html  vercel.json
(+69 files in other folders)
