[project]
name = "portaldot-pdk"
version = "0.1.6"
description = "Portaldot Dev Kit — Python CLI that decodes failed Portaldot transactions into named errors and fix steps. See also `pdk-ts` for the TypeScript companion covering signing surfaces Python cannot reach on V13 metadata."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pugar Huda Mantoro" }]
keywords = ["portaldot", "substrate", "blockchain", "cli", "developer-tools", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "substrate-interface>=1.7",
    "pyyaml>=6.0",
]

[project.scripts]
pdk = "pdk.cli:main"

[project.urls]
Homepage = "https://portaldot-pdk.vercel.app"
Repository = "https://github.com/PugarHuda/portaldot-hackathon-2026-pdk-AmpunBang"
Changelog = "https://github.com/PugarHuda/portaldot-hackathon-2026-pdk-AmpunBang/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdk"]
